[package]
name = "swarm-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["env", "derive"] }
ethers = "1.0.2"
ethers-signers = "1.0.2"
eyre = "0.6.8"
hex = "0.4.3"
passwords = "3.1.12"
serde = "1.0.152"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
ethers = "1.0.2"
