[package]
name = "swarm-tools"
version = "0.1.2"
edition = "2021"
author = "mfw78 <mfw78@rndlabs.xyz>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bincode = "2.0.0-rc.2"
clap = { version = "4.1.6", features = ["env", "derive"] }
chrono = "0.4.24"
ethers = { version = "2.0.2", features = ["abigen", "eip712", "ws"] }
ethers-signers = "2.0.2"
eyre = "0.6.8"
hex = "0.4.3"
passwords = "3.1.12"
serde = { version = "1.0.152", features = ["derive" ] }
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
ethers = "2.0.2"
